--- a/setup.cfg
+++ b/setup.cfg
@@ -29,4 +29,20 @@ where = src
 
 [options.entry_points]
 console_scripts =
-  mybudget = mybudget.__main__:main
+  mybudget = mybudget.main:main
+
+[tool:pytest]
+minversion = 6.0
+addopts = -ra -q --cov
+testpaths = tests
+
+[coverage:run]
+branch = True
+
+[coverage:report]
+show_missing = True
+skip_covered = False
+
+[coverage:paths]
+source = 
+  src/
