Update project structure

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = mybudget
+name = budgetcli
 version = 0.0.1
 author = Madalin Popa
 author_email = "Madalin Popa" contact@madalinpopa.com
@@ -29,7 +29,7 @@ where = src
 
 [options.entry_points]
 console_scripts =
-  mybudget = mybudget.main:main
+  budgetcli = budgetcli.main:main
 
 [tool:pytest]
 minversion = 6.0
