--- a/setup.cfg
+++ b/setup.cfg
@@ -22,10 +22,16 @@ package_dir =
 packages = find:
 include_package_data = True
 install_requires =
+  click
+  google-auth
+  google-auth-httplib2
+  google-api-python-client
   python-dotenv
 
 [options.packages.find]
 where = src
+exclude = 
+  test*
 
 [options.entry_points]
 console_scripts =
