--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ package_dir =
 packages = find:
 include_package_data = True
 install_requires =
-  click
+  typer[all]
   google-auth
   google-auth-httplib2
   google-api-python-client
@@ -35,7 +35,7 @@ exclude =
 
 [options.entry_points]
 console_scripts =
-  budgetcli = budgetcli.main:main
+  budgetcli = budgetcli.main:cli
 
 [tool:pytest]
 minversion = 6.0
