--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ install_requires =
   google-auth
   google-auth-httplib2
   google-api-python-client
-  python-dotenv
+  platformdirs
 
 [options.packages.find]
 where = src
@@ -35,7 +35,7 @@ exclude =
 
 [options.entry_points]
 console_scripts =
-  budgetcli = budgetcli.main:cli
+  budgetcli = budgetcli.main:app
 
 [tool:pytest]
 minversion = 6.0
