--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,12 +15,17 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up Python
-      - uses: actions/setup-python@v4
+        uses: actions/setup-python@v4
         with:
           python-version: 3.11
           cache: 'pip' # caching pip dependencies
-      - run: |
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install --upgrade pipx
-          pipx install build
 
+      - name: Build
+        run: |
+          pyproject-build
