Update pipx command

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install --upgrade pipx
+          pipx install build
 
       - name: Build
         run: |
-          pyproject-build
+          pipx run pyproject-build
