--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ install_requires =
   google-auth
   google-auth-httplib2
   google-api-python-client
+  google-auth-oauthlib
   platformdirs
 
 [options.packages.find]
