Add async support

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ install_requires =
   google-api-python-client
   google-auth-oauthlib
   platformdirs
+  httpx
 
 [options.packages.find]
 where = src
