--- a/setup.cfg
+++ b/setup.cfg
@@ -1,20 +1,19 @@
 [metadata]
 name = budgetcli
-version = 0.0.1
-author = Madalin Popa
-author_email = "Madalin Popa" contact@madalinpopa.com
-description = A simple budgeting app, written in Python
+version = 1.0.0
+author = Code Rustle
+author_email = coderustle@gmail.com
+description = A simple async budgeting app to manage expenses and budgets in google spreadsheets
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = MIT
 license_file = LICENSE
 classifiers =
-    Intended Audience :: Developers
+    Topic :: Utilities
+    Intended Audience :: End Users/Desktop
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python :: 3.11
-    Topic :: Software Development :: Libraries :: Python Modules
-    Topic :: Utilities, Budget CLI
 
 [options]
 package_dir = 
